2009-11-27  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed. 

        Move GOwnPtr* from wtf to wtf/gtk
        https://bugs.webkit.org/show_bug.cgi?id=31793

        Build fix for chromium after r51423.
        Exclude gtk directory from chromium build.

        * JavaScriptCore.gyp/JavaScriptCore.gyp:

2009-11-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Incorrect behaviour of jneq_null in the interpreter
        https://bugs.webkit.org/show_bug.cgi?id=31901

        Correct the logic of jneq_null.  This is already covered by existing tests.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

2009-11-26  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Oliver Hunt.

        Move GOwnPtr* from wtf to wtf/gtk
        https://bugs.webkit.org/show_bug.cgi?id=31793

        * GNUmakefile.am: Change the path for GOwnPtr.*.
        * JavaScriptCore.gyp/JavaScriptCore.gyp: Remove
          GOwnPtr.cpp from the exclude list.
        * JavaScriptCore.gypi: Change the path for GOwnPtr.*.
        * wscript: Remove GOwnPtr.cpp from the exclude list.
        * wtf/GOwnPtr.cpp: Removed.
        * wtf/GOwnPtr.h: Removed.
        * wtf/Threading.h: Change the path for GOwnPtr.h.
        * wtf/gtk/GOwnPtr.cpp: Copied from JavaScriptCore/wtf/GOwnPtr.cpp.
        * wtf/gtk/GOwnPtr.h: Copied from JavaScriptCore/wtf/GOwnPtr.h.
        * wtf/unicode/glib/UnicodeGLib.h: Change the path for GOwnPtr.h.

2009-11-24  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Eric Seidel.

        Add ENABLE_SHARED_SCRIPT feature define and flag for build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=31444

        * Configurations/FeatureDefines.xcconfig:
        * wtf/Platform.h:

2009-11-24  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Simon Fraser.

        Add ability to enable ACCELERATED_COMPOSITING on Windows (currently disabled)